# cpp-mp4

./: .clang-format  CHANGES.md  CMakeLists.txt  NOTICE  NOTICE.md  README.md  THANKS  format.bash  lint.bash
.github/workflows/: build.yml  lint.yml
cmake/: REAME.md  env.cmake  tools.cmake
example/: mp4-muxer.cpp
example/resource/: resource.cpp  resource.hpp
include/shiguredo/mp4/: box.hpp  box_header.hpp  box_info.hpp  box_map.hpp  box_type.hpp  box_types.hpp  brand.hpp  constants.hpp  grouping_type.hpp  version.hpp
include/shiguredo/mp4/bitio/: bitio.hpp  reader.hpp  writer.hpp
include/shiguredo/mp4/box/: av1c.hpp  avc.hpp  boxes.hpp  btrt.hpp  co64.hpp  colr.hpp  ctts.hpp  dOps.hpp  data.hpp  dinf.hpp  dref.hpp  edts.hpp  elst.hpp  emsg.hpp  esds.hpp  fiel.hpp  free.hpp  ftyp.hpp  hdlr.hpp  ilst.hpp  iods.hpp  mdat.hpp  mdhd.hpp  mdia.hpp  mehd.hpp  meta.hpp  mfhd.hpp  mfra.hpp  mfro.hpp  minf.hpp  moof.hpp  moov.hpp  mvex.hpp  mvhd.hpp  pixel_aspect_ratio.hpp  pssh.hpp  sample_entry.hpp  sbgp.hpp  schi.hpp  sdtp.hpp  (+28 more)
include/shiguredo/mp4/endian/: endian.hpp
include/shiguredo/mp4/reader/: reader.hpp
include/shiguredo/mp4/stream/: stream.hpp
include/shiguredo/mp4/time/: time.hpp
include/shiguredo/mp4/track/: aac.hpp  av1.hpp  h264.hpp  mp3.hpp  opus.hpp  soun.hpp  track.hpp  vide.hpp  vpx.hpp
include/shiguredo/mp4/writer/: faststart_writer.hpp  simple_writer.hpp  writer.hpp
src/: box.cpp  box_header.cpp  box_info.cpp  box_map.cpp  box_type.cpp  box_types.cpp  version.cpp
src/bitio/: bitio.cpp  reader.cpp  writer.cpp
src/box/: av1c.cpp  avc.cpp  btrt.cpp  co64.cpp  colr.cpp  ctts.cpp  dOps.cpp  data.cpp  dinf.cpp  dref.cpp  edts.cpp  elst.cpp  emsg.cpp  esds.cpp  fiel.cpp  free.cpp  ftyp.cpp  hdlr.cpp  ilst.cpp  iods.cpp  mdat.cpp  mdhd.cpp  mdia.cpp  mehd.cpp  meta.cpp  mfhd.cpp  mfra.cpp  mfro.cpp  minf.cpp  moof.cpp  moov.cpp  mvex.cpp  mvhd.cpp  pixel_aspect_ratio.cpp  pssh.cpp  sample_entry.cpp  sbgp.cpp  schi.cpp  sdtp.cpp  sgpd.cpp  (+27 more)
src/cli/: mp4-tool.cpp
src/endian/: endian.cpp
src/reader/: reader.cpp
src/stream/: stream.cpp
src/time/: time.cpp
src/track/: aac.cpp  av1.cpp  h264.cpp  mp3.cpp  opus.cpp  soun.cpp  track.cpp  vide.cpp  vpx.cpp
src/writer/: faststart_writer.cpp  simple_writer.cpp  writer.cpp
test/: CMakeLists.txt  box_header.cpp  box_info.cpp  box_type.cpp  box_types.cpp  main.cpp  version.cpp
test/bitio/: CMakeLists.txt  bitio.cpp  main.cpp  reader.cpp  writer.cpp
test/endian/: CMakeLists.txt  endian.cpp  main.cpp
test/integration/: Makefile  README.md
test/integration/input/: check
test/integration/output/: check
test/integration/resources/: NOTICE  aac.csv  av1.csv  h264.csv  mp3.csv  opus.csv  vp8.csv  vp9.csv
test/time/: CMakeLists.txt  main.cpp  time.cpp
test/track/: CMakeLists.txt  h264.cpp  main.cpp  track.cpp
